# VirtualCamera

./: .editorconfig  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: two_spheres_animation.avifs
src/: main.cc
src/vcam/: main.cc
src/vcam/core/: entity.hh  math.cc  math.hh  scene.hh
src/vcam/movement/: movement_controller.cc  movement_controller.hh
src/vcam/render/: camera_component.cc  camera_component.hh  light_component.cc  light_component.hh  model.hh  render_component.cc  render_component.hh  render_system.cc  render_system.hh
